--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -11,27 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
+      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Step 2: Set up JDK 23
+      # Setup JDK 23
       - name: Set up JDK 23
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '23'
 
-      # Step 3: Compile all Java files with Maven
+      # Compile the project
       - name: Compile project
         run: mvn clean compile
 
-      # Step 4: Run all main classes automatically
-      - name: Run all main classes
-        run: |
-          echo "Searching for all compiled classes..."
-          for classfile in $(find target/classes -name "*.class" ! -name "*$*"); do
-            classname=$(echo $classfile | sed 's|target/classes/||;s|/|.|g;s|.class$||')
-            echo "Running $classname"
-            java -cp target/classes $classname || true
-          done
+      # Run Arrays.java
+      - name: Run Arrays class
+        run: java -cp target/classes org.Program_Under_CI_CD.Arrays
